# rustFrida

./: Cargo.toml
.cargo/: config.toml
loader/: README.md  build.sh  loader.c  loader.py
src/: agent.rs  gumlibc.rs  jhook.rs  main.rs  relocater.rs  transform.c
