[package]
name = "rust_frida"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "ARM64架构下的动态库注入和远程函数调用工具"

[dependencies]
libc = "1.0.0-alpha.1"
clap = { version = "4.5.37", features = ["derive"] }
nix = { version = "0.30.1", features = ["ptrace", "socket", "uio"] }
paste = "1.0.15"
jni = "0.21.1"
once_cell = "1.21.3"

[lib]
name = "agent"
crate-type = ["cdylib"]
path = "src/agent.rs"
debug = true

[[bin]]
name = "rustfrida"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'
